- add DI support to gRPC services